<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dmitry.bookstore.ui.AddAuthorFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_text"
                    android:inputType="text"
                    android:nextFocusDown="@+id/last_name_edit_text" />

                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name_text"
                    android:inputType="text"
                    android:nextFocusDown="@+id/patronymic_edit_text" />

                <EditText
                    android:id="@+id/patronymic_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/patronymic_text"
                    android:inputType="text"
                    android:nextFocusDown="@+id/birthday_edit_text" />

                <EditText
                    android:id="@+id/birthday_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday_text"
                    android:inputType="date"
                    android:nextFocusDown="@+id/email_edit_text" />

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_text"
                    android:inputType="textEmailAddress" />

            </LinearLayout>


            <Button
                android:id="@+id/add_email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_email_button"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit_author_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textAllCaps="false" />

</LinearLayout>
