<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dmitry.bookstore.ui.AddBookFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title_book_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/title_book_text" />

            <EditText
                android:id="@+id/year_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/year_text" />

            <EditText
                android:id="@+id/pages_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/pages_text" />

            <CheckedTextView
                android:id="@+id/checkedTextView"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/listPreferredItemHeightSmall"
                android:layout_gravity="right"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="right|center_vertical"
                android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
                android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit_book_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textAllCaps="false" />

</LinearLayout>
